changed colors and banner

--- a/index-en.html
+++ b/index-en.html
@@ -43,7 +43,7 @@
       <!-- Heading Row -->
       <div class="row my-4">
         <div class="col-lg-12">
-          <img class="img-fluid rounded" src="images/header-en.png" alt="">
+          <img class="img-fluid rounded" src="images/header-en.jpg" alt="">
         </div>
       </div><!-- /.row -->
       <!-- Content Row -->
@@ -51,8 +51,8 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100">
             <div class="card-body">
-              <h2 class="card-title text-center">Basic care<br>+ Bath</h2>
-              <p class="card-text text-center">Paw and ear cleaning plus nail trim</p>
+              <h2 class="card-title text-center">Basic care</h2>
+              <p class="card-text text-center">Bath, paw and ear cleaning, nail trim</p>
             </div>
             <div class="card-footer smalldogs">
               <a class="btn btn-block"> <strong>Up to 10 kilos: 15€</strong></a>
@@ -65,8 +65,8 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100">
             <div class="card-body">
-              <h2 class="card-title text-center">Grooming + Bath</h2>
-              <p class="card-text text-center">De-matting, grooming, & brushing</p>
+              <h2 class="card-title text-center">Grooming</h2>
+              <p class="card-text text-center">Bath, de-matting, grooming, brushing</p>
             </div>
             <div class="card-footer smalldogs">
               <a class="btn btn-block"> <strong>Up to 10 kilos: 25€</strong></a>
@@ -110,7 +110,7 @@
            </div>
         </div>
        </div>
-          <hr>
+
     </div>
          </div>
 </html>
