--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- Heading Row -->
       <div class="row my-4">
         <div class="col-lg-12">
-          <img class="img-fluid rounded" src="images/header.png" alt="">
+          <img class="img-fluid rounded" src="images/headernew.jpg" alt="">
         </div>
         <!-- /.col-lg-8 -->
         <!-- /.col-md-4 -->
@@ -115,7 +115,7 @@
            </div>
         </div>
        </div>
-          <hr>
+          
     </div>
          </div>
 </html>
