--- a/index-en.html
+++ b/index-en.html
@@ -86,7 +86,7 @@
               <a class="btn btn-block"> <strong>25€</strong></a>
             </div>
             <div class="card-footer">
-              <a class="btn btn-block"><img src="images/catsm.png"></a>
+              <a class="btn btn-block"><strong>For cats of all sizes</strong></a>
             </div>
           </div>
         </div><!-- /.col-md-4 -->
@@ -97,7 +97,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <p class="m-0 text-white footerinfo">Hi! I'm "Jo the Groomer".  I make your four-footed loved ones as beautiful on the outside as they are on the inside. My shop is located <a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank"> in Koukaki at Veikou 104.</a></p>
+            <p class="m-0 text-white footerinfo">Hi! I'm Jo.  I make your four-footed loved ones as beautiful on the outside as they are on the inside. My shop is located <a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank"> in Koukaki at Veikou 104.</a></p>
             <p class="m-0 text-white footerinfo">Yes, we're living in difficult times. However, that doesn't mean that we forget about our beloved animal companions. I offer you the opportunity to give them a little tender loving care and beauty at an affordable price. I look forward to meeting both of you!</p>
             <img src="images/outside.png" class="outside">
          </div>
