--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <a class="btn btn-block"> <strong>25€</strong></a>
             </div>
             <div class="card-footer">
-              <a class="btn btn-block"><img src="images/catsm.png"></a>
+              <a class="btn btn-block">Για όλες τις γάτες</a>
             </div>
           </div>
         </div><!-- /.col-md-4 -->
@@ -102,7 +102,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <p class="m-0 text-white footerinfo">Είμαι η Τζο "The Groomer" (περιποίηση και καλλωνισμός κατοκίδιων) και βρίσκομαι στην Αθήνα στο <a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank">Κουκάκι στην Βεϊκου 104.</a></p>
+            <p class="m-0 text-white footerinfo">Είμαι η Τζο (περιποίηση και καλλωνισμός κατοκίδιων) και βρίσκομαι στην Αθήνα στο <a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank">Κουκάκι στην Βεϊκου 104.</a></p>
             <p class="m-0 text-white footerinfo">Λένε οτι όταν κανεις επάγγελμα αυτό που αγαπάς είναι σαν να μην δουλεύεις. Είναι αλήθεια. Εχουν δίκιο. Σε αυτές τις δύσκολες εποχές που ζούμε είναι πολύ σημαντικό να μπορούμε να περιποιηθούμε τους συντρόφους μας, τα ζωάκια μας, με πολλή αγάπη, ομορφιά, φροντίδα, και καλες τιμες. Σας περιμένω.</p>
             <img src="images/outside.png" class="outside">
          </div>
@@ -115,7 +115,7 @@
            </div>
         </div>
        </div>
-          
+
     </div>
          </div>
 </html>
