changed colors and footer

--- a/index-en.html
+++ b/index-en.html
@@ -21,19 +21,13 @@
   </head>
   <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Ελληνικά
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
+        <div>
+          <ul class="nav navbar-nav">
+            <li><a href="index.html" class="language">Ελληνικά</a></li>
+            <li><a href="https://twitter.com/skulakimou" target="_blank"><i class="fa fa-twitter fa-lg"></i></a></li>
           </ul>
         </div>
       </div>
@@ -48,69 +42,85 @@
       </div><!-- /.row -->
       <!-- Content Row -->
       <div class="row">
-        <div class="col-md-4 mb-4">
+        <div class="col-md-3 mb-3">
           <div class="card h-100">
             <div class="card-body">
               <h2 class="card-title text-center">Basic care</h2>
               <p class="card-text text-center">Bath, paw and ear cleaning, nail trim</p>
             </div>
             <div class="card-footer smalldogs">
-              <a class="btn btn-block"> <strong>Up to 10 kilos: 15€</strong></a>
+              <a class="btn btn-block">Up to 10 kilos: 15€</a>
             </div>
             <div class="card-footer">
-              <a class="btn btn-block"><strong>Over 10 kilos: 20€</strong></a>
+              <a class="btn btn-block">Over 10 kilos: 20€</a>
             </div>
           </div>
-        </div><!-- /.col-md-4 -->
-        <div class="col-md-4 mb-4">
+        </div>
+        <div class="col-md-3 mb-3">
           <div class="card h-100">
             <div class="card-body">
               <h2 class="card-title text-center">Grooming</h2>
               <p class="card-text text-center">Bath, de-matting, grooming, brushing</p>
             </div>
             <div class="card-footer smalldogs">
-              <a class="btn btn-block"> <strong>Up to 10 kilos: 25€</strong></a>
+              <a class="btn btn-block">Up to 10 kilos: 25€</a>
             </div>
             <div class="card-footer">
-              <a class="btn btn-block"><strong>Over 10 kilos: 30€</strong></a>
+              <a class="btn btn-block">Over 10 kilos: 30€</a>
             </div>
           </div>
-        </div> <!-- /.col-md-4 -->
-        <div class="col-md-4 mb-4">
+        </div>
+        <div class="col-md-3 mb-3">
+          <div class="card h-100">
+            <div class="card-body">
+              <h2 class="card-title text-center">Boarding</h2>
+              <p class="card-text text-center">Spayed females or neutered males only</p>
+            </div>
+            <div class="card-footer smalldogs">
+              <a class="btn btn-block">10€ per day</a>
+            </div>
+            <div class="card-footer">
+              <a class="btn btn-block">Up to 10 kilos</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-3">
           <div class="card h-100">
             <div class="card-body">
               <h2 class="card-title text-center">Cats</h2>
               <p class="card-text text-center">Fur trim</p>
             </div>
             <div class="card-footer smalldogs">
-              <a class="btn btn-block"> <strong>25€</strong></a>
+              <a class="btn btn-block">25€</a>
             </div>
             <div class="card-footer">
-              <a class="btn btn-block"><strong>For cats of all sizes</strong></a>
+              <a class="btn btn-block">For cats of all sizes</a>
             </div>
           </div>
         </div><!-- /.col-md-4 -->
       </div><!-- /.row -->
     </div><!-- /.container -->
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5">
       <div class="container">
         <div class="row">
-          <div class="col-md-7">
-            <p class="m-0 text-white footerinfo">Hi! I'm Jo.  I make your four-footed loved ones as beautiful on the outside as they are on the inside. My shop is located <a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank"> in Koukaki at Veikou 104.</a></p>
-            <p class="m-0 text-white footerinfo">Yes, we're living in difficult times. However, that doesn't mean that we forget about our beloved animal companions. I offer you the opportunity to give them a little tender loving care and beauty at an affordable price. I look forward to meeting both of you!</p>
-            <img src="images/outside.png" class="outside">
+          <div class="col-md-6">
+            <div class="address">
+            <img src="images/outside1.jpg" class="outside">
+            <!--<p  class="text-center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3145.625397525473!2d23.717482615219165!3d37.96253187972574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bd03a442f667%3A0x1f8352dc30d91793!2sVeikou+104%2C+Athina+117+41!5e0!3m2!1sen!2sgr!4v1511110849304" width="450" height="254" allowfullscreen></iframe></p> -->
+            </div>
          </div>
-         <div class="col-md-5">
-           <div class="address">
-           <p class="m-0 text-center text-white">Veikou 104 Koukaki 11741 Athens</p>
-           <p class="m-0 text-center text-white">211 014 0970 - 694 455 0156</p>
-           <p class="m-0 text-center text-white"><a href="mailto:g.belibasaki@hotmail.gr" class="googlemap"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a></p>
-           <p  class="text-center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3145.625397525473!2d23.717482615219165!3d37.96253187972574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bd03a442f667%3A0x1f8352dc30d91793!2sVeikou+104%2C+Athina+117+41!5e0!3m2!1sen!2sgr!4v1511110849304" width="300" height="300" allowfullscreen></iframe></p>
-           </div>
-        </div>
+          <div class="col-md-6">
+            <div class="address">
+              <p class="m-0"><strong>Veikou 104 Koukaki 11741 Athens</strong></p>
+              <p class="m-0"><strong>211 014 0970 - 694 455 0156</strong></p>
+              <hr>
+              <!--<p class="m-0"><a href="mailto:g.belibasaki@hotmail.gr" class="googlemap"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a></p>-->
+            </div>
+            <p class="m-0  footerinfo">Hi! I'm Jo.  I make your four-footed loved ones as beautiful on the outside as they are on the inside. My shop is located <a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank"> in Koukaki at Veikou 104.</a></p>
+            <p class="m-0 footerinfo">Yes, we're living in difficult times. However, that doesn't mean that we forget about our beloved animal companions. I offer you the opportunity to give them a little tender loving care and beauty at an affordable price. I look forward to meeting both of you!</p>
+          </div>
        </div>
-
     </div>
          </div>
 </html>
