--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="περιποίηση και καλλωνισμός κατοκίδιων">
+    <meta name="description" content="περιποίηση και καλλωπισμός κατοκίδιων">
     <meta name="author" content="humans.txt">
-    <title>Τζο: Σκυλοκαλλωνισμοι : Περιποίηση και καλλωνισμός κατοκίδιων</title>
+    <title>Τζο: Σκυλοκαλλωπισμοί : Περιποίηση και καλλωπισμός κατοκίδιων</title>
     <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
@@ -19,22 +19,15 @@
     <link href="css/small-business.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
   </head>
-
   <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index-en.html">English
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
+        <div>
+          <ul class="nav navbar-nav">
+            <li><a href="index-en.html" class="language">English</a></li>
+            <li><a href="https://twitter.com/skulakimou" target="_blank" class="footerlink"><i class="fa fa-twitter fa-lg"></i></a></li>
           </ul>
         </div>
       </div>
@@ -46,76 +39,88 @@
         <div class="col-lg-12">
           <img class="img-fluid rounded" src="images/headernew.jpg" alt="">
         </div>
-        <!-- /.col-lg-8 -->
-        <!-- /.col-md-4 -->
       </div>
       <!-- /.row -->
       <!-- Content Row -->
       <div class="row">
-        <div class="col-md-4 mb-4">
+        <div class="col-md-3 mb-3">
           <div class="card h-100">
             <div class="card-body">
-              <h2 class="card-title text-center">Απλή Περιποίηση</h2>
+              <h2 class="card-title text-center greektitle">Απλή Περιποίηση</h2>
               <p class="card-text text-center">Καθάρισμα αυτιών, κόψιμο νυχιών, καθάρισμα ποδιών</p>
             </div>
             <div class="card-footer smalldogs">
-              <a class="btn btn-block"> <strong>Έως 10 κιλά: 15€</strong></a>
+              <a class="btn btn-block">Έως 10 κιλά: 15€</a>
             </div>
             <div class="card-footer">
-              <a class="btn btn-block"><strong>Από 10 κιλά & πάνω: 20€</strong></a>
+              <a class="btn btn-block">Από 10 κιλά & πάνω: 20€</a>
             </div>
           </div>
-        </div><!-- /.col-md-4 -->
-        <div class="col-md-4 mb-4">
+        </div>
+        <div class="col-md-3 mb-3">
           <div class="card h-100">
             <div class="card-body">
-              <h2 class="card-title text-center">Κούρεμα-Μπάνιο</h2>
+              <h2 class="card-title text-center greektitle">Κούρεμα-Μπάνιο</h2>
               <p class="card-text text-center">Καθάρισμα αυτιών, κόψιμο νυχιών, καθάρισμα ποδιών</p>
             </div>
             <div class="card-footer smalldogs">
-              <a class="btn btn-block"> <strong>Έως 10 κιλά: 25€</strong></a>
+              <a class="btn btn-block">Έως 10 κιλά: 25€</a>
             </div>
             <div class="card-footer">
-              <a class="btn btn-block"><strong>Από 10 κιλά & πάνω: 30€</strong></a>
+              <a class="btn btn-block">Από 10 κιλά & πάνω: 30€</a>
             </div>
           </div>
-        </div><!-- /.col-md-4 -->
-        <div class="col-md-4 mb-4">
+        </div>
+        <div class="col-md-3 mb-3">
           <div class="card h-100">
             <div class="card-body">
-              <h2 class="card-title text-center">Γατάκια</h2>
+              <h2 class="card-title text-center greektitle">Φιλοξενία</h2>
+              <p class="card-text text-center">Θηλυκά η αρσενικά στειρωμένα</p>
+            </div>
+            <div class="card-footer smalldogs">
+              <a class="btn btn-block">10€ την ημέρα</a>
+            </div>
+            <div class="card-footer">
+              <a class="btn btn-block">Έως 10 κιλά</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-3">
+          <div class="card h-100">
+            <div class="card-body">
+              <h2 class="card-title text-center greektitle">Γατάκια</h2>
               <p class="card-text text-center">Κούρεμα με νάρκωση</p>
             </div>
             <div class="card-footer smalldogs">
-              <a class="btn btn-block"> <strong>25€</strong></a>
+              <a class="btn btn-block">25€</a>
             </div>
             <div class="card-footer">
               <a class="btn btn-block">Για όλες τις γάτες</a>
             </div>
           </div>
-        </div><!-- /.col-md-4 -->
-      </div> <!-- /.row -->
+        </div>
+      </div>
     </div>
     <!-- /.container -->
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5">
       <div class="container">
         <div class="row">
-          <div class="col-md-7">
-            <p class="m-0 text-white footerinfo">Είμαι η Τζο (περιποίηση και καλλωνισμός κατοκίδιων) και βρίσκομαι στην Αθήνα στο <a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank">Κουκάκι στην Βεϊκου 104.</a></p>
-            <p class="m-0 text-white footerinfo">Λένε οτι όταν κανεις επάγγελμα αυτό που αγαπάς είναι σαν να μην δουλεύεις. Είναι αλήθεια. Εχουν δίκιο. Σε αυτές τις δύσκολες εποχές που ζούμε είναι πολύ σημαντικό να μπορούμε να περιποιηθούμε τους συντρόφους μας, τα ζωάκια μας, με πολλή αγάπη, ομορφιά, φροντίδα, και καλες τιμες. Σας περιμένω.</p>
-            <img src="images/outside.png" class="outside">
+          <div class="col-md-6">
+            <div class="address">
+            <img src="images/outside1.jpg" class="outside">
+            </div>
          </div>
-         <div class="col-md-5">
-           <div class="address">
-           <p class="m-0 text-center text-white">Βεϊκου 104 Κουκάκι Τ.Κ. 11741 Αθήνα</p>
-           <p class="m-0 text-center text-white">211 014 0970 - 694 455 0156</p>
-           <p class="m-0 text-center text-white"><a href="mailto:g.belibasaki@hotmail.gr" class="googlemap"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a></p>
-           <p  class="text-center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3145.625397525473!2d23.717482615219165!3d37.96253187972574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bd03a442f667%3A0x1f8352dc30d91793!2sVeikou+104%2C+Athina+117+41!5e0!3m2!1sen!2sgr!4v1511110849304" width="300" height="300" allowfullscreen></iframe></p>
-           </div>
-        </div>
+          <div class="col-md-6">
+            <div class="address">
+              <p class="m-0"><strong>Βεϊκου 104 Κουκάκι Τ.Κ. 11741 Αθήνα</strong></p>
+              <p class="m-0"><strong>211 014 0970 - 694 455 0156</strong></p>
+              <hr>
+            </div>
+            <p class="m-0  footerinfo">Είμαι η Τζο (περιποίηση και καλλωπισμός κατοκίδιων) και βρίσκομαι στην Αθήνα στο Κουκάκι στην <a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank">Βεϊκου 104</a>.</p>
+            <p class="m-0 footerinfo">Λένε οτι όταν κανεις επάγγελμα αυτό που αγαπάς είναι σαν να μην δουλεύεις. Είναι αλήθεια. Εχουν δίκιο. Σε αυτές τις δύσκολες εποχές που ζούμε είναι πολύ σημαντικό να μπορούμε να περιποιηθούμε τους συντρόφους μας, τα ζωάκια μας, με πολλή αγάπη, ομορφιά, φροντίδα, και καλες τιμες. Σας περιμένω.</p>
+          </div>
        </div>
-
     </div>
          </div>
 </html>
