--- a/index-en.html
+++ b/index-en.html
@@ -88,7 +88,7 @@
           <div class="card h-100">
             <div class="card-body">
               <h2 class="card-title text-center">Cats</h2>
-              <p class="card-text text-center">Fur trim</p>
+              <p class="card-text text-center">Fur trim (with a sedative)</p>
             </div>
             <div class="card-footer smalldogs">
               <a class="btn btn-block">25€</a>
@@ -110,16 +110,20 @@
             <!--<p  class="text-center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3145.625397525473!2d23.717482615219165!3d37.96253187972574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bd03a442f667%3A0x1f8352dc30d91793!2sVeikou+104%2C+Athina+117+41!5e0!3m2!1sen!2sgr!4v1511110849304" width="450" height="254" allowfullscreen></iframe></p> -->
             </div>
          </div>
-          <div class="col-md-6">
-            <div class="address">
-              <p class="m-0"><strong>Veikou 104 Koukaki 11741 Athens</strong></p>
-              <p class="m-0"><strong>211 014 0970 - 694 455 0156</strong></p>
-              <hr>
-              <!--<p class="m-0"><a href="mailto:g.belibasaki@hotmail.gr" class="googlemap"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a></p>-->
-            </div>
-            <p class="m-0  footerinfo">Hi! I'm Jo.  I make your four-footed loved ones as beautiful on the outside as they are on the inside. My shop is located <a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank"> in Koukaki at Veikou 104.</a></p>
-            <p class="m-0 footerinfo">Yes, we're living in difficult times. However, that doesn't mean that we forget about our beloved animal companions. I offer you the opportunity to give them a little tender loving care and beauty at an affordable price. I look forward to meeting both of you!</p>
-          </div>
+         <div class="col-md-6">
+           <div class="address">
+             <p class="m-0">Monday, Wednesday, and Saturday by appointment only</p>
+             <p class="m-0">Tuesday, Thursday, and Friday from 10:30AM-7:30PM</p>
+           </div>
+             <!--<p class="m-0"><strong>Βεϊκου 104 Κουκάκι Τ.Κ. 11741 Αθήνα</strong></p>-->
+             <!--<p class="m-0 phone">211 014 0970 - 694 455 0156</p>-->
+             <a href="tel:211-014-0970" class="phone">211 014 0970</a>
+             <a href="tel:694-455-0156" class="phone">694 455 0156</a>
+             <hr>
+
+           <p class="m-0  footerinfo">Hi! I'm Jo. I make your four-footed loved ones as beautiful on the outside as they are on the inside. My shop is located in Koukaki at<a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank"> Veikou 104</a>.</p>
+           <p class="m-0 footerinfo">Just because we're living in difficult times doesn't mean that we forget about our beloved animal companions. I offer you the opportunity to give them a little tender loving care and beauty at an affordable price. I look forward to meeting both of you!</p>
+         </div>
        </div>
     </div>
          </div>
