--- a/index.html
+++ b/index.html
@@ -113,12 +113,17 @@
          </div>
           <div class="col-md-6">
             <div class="address">
-              <p class="m-0"><strong>Βεϊκου 104 Κουκάκι Τ.Κ. 11741 Αθήνα</strong></p>
-              <p class="m-0"><strong>211 014 0970 - 694 455 0156</strong></p>
-              <hr>
+              <p class="m-0">Δεύτερα, Τετάρτη, και Σάββατο κατόπιν ραντεβού</p>
+              <p class="m-0">Τρίτη, Πέμπτη, και Παρασκευή απο 10:30πμ έως 7:30μμ</p>
             </div>
+              <!--<p class="m-0"><strong>Βεϊκου 104 Κουκάκι Τ.Κ. 11741 Αθήνα</strong></p>-->
+              <!--<p class="m-0 phone">211 014 0970 - 694 455 0156</p>-->
+              <a href="tel:211-014-0970" class="phone">211 014 0970</a>
+              <a href="tel:694-455-0156" class="phone">694 455 0156</a>
+              <hr>
+
             <p class="m-0  footerinfo">Είμαι η Τζο (περιποίηση και καλλωπισμός κατοκίδιων) και βρίσκομαι στην Αθήνα στο Κουκάκι στην <a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank">Βεϊκου 104</a>.</p>
-            <p class="m-0 footerinfo">Λένε οτι όταν κανεις επάγγελμα αυτό που αγαπάς είναι σαν να μην δουλεύεις. Είναι αλήθεια. Εχουν δίκιο. Σε αυτές τις δύσκολες εποχές που ζούμε είναι πολύ σημαντικό να μπορούμε να περιποιηθούμε τους συντρόφους μας, τα ζωάκια μας, με πολλή αγάπη, ομορφιά, φροντίδα, και καλες τιμες. Σας περιμένω.</p>
+            <p class="m-0 footerinfo">Σε αυτές τις δύσκολες εποχές που ζούμε είναι πολύ σημαντικό να μπορούμε να περιποιηθούμε τους συντρόφους μας, τα ζωάκια μας, με πολλή αγάπη, ομορφιά, φροντίδα, και καλες τιμες. Σας περιμένω!</p>
           </div>
        </div>
     </div>
