--- a/index-en.html
+++ b/index-en.html
@@ -121,7 +121,7 @@
              <a href="tel:694-455-0156" class="phone">694 455 0156</a>
              <hr>
 
-           <p class="m-0  footerinfo">Hi! I'm Jo. I make your four-footed loved ones as beautiful on the outside as they are on the inside. My shop is located in Koukaki at<a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank"> Veikou 104</a>.</p>
+           <p class="m-0  footerinfo">Hi! I'm Jo. I make your four-footed loved ones as beautiful on the outside as they are on the inside. My shop is located in Koukaki at<a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank"> Veikou 104 T.K. 11741</a>.</p>
            <p class="m-0 footerinfo">Just because we're living in difficult times doesn't mean that we forget about our beloved animal companions. I offer you the opportunity to give them a little tender loving care and beauty at an affordable price. I look forward to meeting both of you!</p>
          </div>
        </div>
