--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <a href="tel:694-455-0156" class="phone">694 455 0156</a>
               <hr>
 
-            <p class="m-0  footerinfo">Είμαι η Τζο (περιποίηση και καλλωπισμός κατοκίδιων) και βρίσκομαι στην Αθήνα στο Κουκάκι στην <a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank">Βεϊκου 104</a>.</p>
+            <p class="m-0  footerinfo">Είμαι η Τζο (περιποίηση και καλλωπισμός κατοκίδιων) και βρίσκομαι στην Αθήνα στο Κουκάκι στην <a href="https://goo.gl/maps/RdA11CPib292" class="googlemap" target="_blank">Βεϊκου 104 Τ.Κ.11741</a>.</p>
             <p class="m-0 footerinfo">Σε αυτές τις δύσκολες εποχές που ζούμε είναι πολύ σημαντικό να μπορούμε να περιποιηθούμε τους συντρόφους μας, τα ζωάκια μας, με πολλή αγάπη, ομορφιά, φροντίδα, και καλες τιμες. Σας περιμένω!</p>
           </div>
        </div>
