--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
          </div>
           <div class="col-md-6">
             <div class="address">
-              <p class="m-0">Δεύτερα, Τετάρτη, και Σάββατο κατόπιν ραντεβού</p>
+              <p class="m-0">Δευτέρα, Τετάρτη, και Σάββατο κατόπιν ραντεβού</p>
               <p class="m-0">Τρίτη, Πέμπτη, και Παρασκευή απο 10:30πμ έως 7:30μμ</p>
             </div>
               <!--<p class="m-0"><strong>Βεϊκου 104 Κουκάκι Τ.Κ. 11741 Αθήνα</strong></p>-->
